fixed an issue with buttons on smaller screen sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -304,7 +304,6 @@ input[type="submit"]:hover {
     }
 
     .container p {
-        margin: 0;
         padding: 0;
         font-size: 10px;
     }
@@ -322,19 +321,18 @@ input[type="submit"]:hover {
         margin-top: 5px;
     }
 
-    .container button {
+    .container a {
+        color: #fff;
         padding: 0.5rem;
-        margin-top: 1rem;
+        margin-top: 2rem;
         border: none;
         border-radius: 5px;
         background-color: #000000;
-        color: #fff;
-        font-size: 10px;
+        font-size: 12px;
         cursor: pointer;
-        transition: background-color 0.1s ease-in-out;
     }
 
-    .container button:hover {
+    .container a:hover {
         background-color: #526f94;
     }
 
@@ -421,7 +419,6 @@ input[type="submit"]:hover {
     }
 
     .container p {
-        margin: 0;
         padding: 0;
         font-size: 10px;
     }
@@ -438,19 +435,18 @@ input[type="submit"]:hover {
         margin-top: 5px;
     }
 
-    .container button {
+    .container a {
+        color: #fff;
         padding: 0.5rem;
-        margin-top: 1rem;
+        margin-top: 2rem;
         border: none;
         border-radius: 5px;
         background-color: #000000;
-        color: #fff;
-        font-size: 10px;
+        font-size: 12px;
         cursor: pointer;
-        transition: background-color 0.1s ease-in-out;
     }
 
-    .container button:hover {
+    .container a:hover {
         background-color: #526f94;
     }
 
